src/ch/eaternity/client/global.css
body, table {
  font-size: small;
}
body {
  font-family: Helvetica, Arial, sans-serif;
  color: #000;
  background: #fff;
}

hr {
	border:solid #F48F28 1px;
	}
a:link, a:visited, a:hover, a:active {
  color: #000;
}
.extra-icon{
	width:20px;
	display:inline;
	padding:5px 0px 5px 0px;
	margin:0px 4px 0px -3px;
	text-wrap:none;
	word-wrap:none;
	white-space: nowrap;  
	/*
	
	width: 30px; 
	text-indent: -9999px;
	*/ 
	text-indent: 5px;
	height: 22px;
	background-image: url(icons-3.png);
	background-position: top;
	overflow:hidden;

	background-color     : transparent;
	background-repeat    : no-repeat;
	}
.base-icons{
		padding:5px 0px 0px 0px;
	margin:0px 0px 0px -6px;
	text-wrap:none;
	word-wrap:none;
	white-space: nowrap;  
	display: block;
	/*
	
	width: 30px; 
	text-indent: -9999px;
	*/ 
	text-indent: 5px;
	height: 22px;
	background-image: url(icons-small.png);
	background-position: top;
	/* get it done
	overflow:hidden;
	*/

	background-color     : transparent;
	background-repeat    : no-repeat;
	}

.ingText {
	display: inline;
margin-right: 65px;
overflow: hidden;
width: 100%;
	}

	.legend1 {
		display: block;
		clear:both;
		width: 100%;
			text-wrap:none;
	word-wrap:none;
	white-space: nowrap;  
		}
			.legend2 {
		display: none;
		clear:both;
		width: 100%;
			text-wrap:none;
	word-wrap:none;
	white-space: nowrap;  
		}

.smiley1 {
		background-position  : -2px -33px;
}

.smiley2 {
		background-position  : -2px -58px;
}

.smiley3 {
		background-position  : -2px -83px;
}

.carrot {
	background-position  : -2px -5px;
}

.bio {
	background-position  : -2px -134px;
}

.regloc {
	background-position  : -2px -109px;
}

.yourcssclass{
	padding: 8px 24px 24px 14px;
	border-top: 1.5px outset #fff;
	
	background-image:url('tooltip3.png');
	background-repeat:no-repeat;
	background-position: left bottom;

	}

.gwt-ListBox{
/*  as these things effect all listboxes	*/
margin-top:5px; 
margin-right:6px; 
}

.putRight{
	display: inline;
float: right;
margin-left: -65px;
margin-right: 20px;
width: 65px;
	
	/*
	margin-left:-85px;
	background:#fff;
	border: .5px outset #ccc;
	
	*/
	
	}
	
	.putRight2{
	display: inline;
float: right;
margin-left: -65px;
margin-right: 0px;
width: 65px;
	
	/*
	margin-left:-85px;
	background:#fff;
	border: .5px outset #ccc;
	
	*/
	
	}

.cursorStyle{
	 cursor: pointer;
  	cursor: hand;
  	padding: 0px 2px 2px 2px;
	}
	
.ohhLittlePlus {
	margin:-6px 0px 0px 6px;
	text-decoration: none;
	}
.inline {
	display:inline;
	float:left;
	}
.notInline {
	clear:both;
	display:block;
	padding-right:2px;
	}

.cookingInstr {
	float:left;
	margin-left:10px;
	height:128px;
	width:170px;
	display:inline;
	overflow:hidden;
	margin-bottom:8px;
	font-size: 0.9em;
	
	}
	.platzrechts{
	margin-left:8px;
	}
	.overlap{
	margin-bottom:-620px;
	margin-top: 30px;
	}
	.imageSmall {
		display:inline;
		float:left;
		cursor: pointer;
  		cursor: hand;
  		padding: 0px 2px 2px 2px;
	}
	.imageBig {
		display:inline;
		float:left;
		cursor: pointer;
  		cursor: hand;
  		padding: 0px 2px 2px 2px;
  		margin-bottom:-620px;
		margin-top: 30px;
	}
	
	.black {
	 			color:#000;
			padding:3px;
	}
	
	.grey {
				color:#bbb;
			padding:3px;
	}
	
.floatRight{
	float:right;
	margin-left:100px;
	padding-right:6px;
	}

.recipe {
	background: #F7A959;
	-moz-border-radius: 3px;
	-webkit-border-radius:3px;
	border-radius: 3px;
	border:1px solid #fff;
}
.littleZutatSpec tbody tr td{
	/*vertical-align: middle;*/
	border:0px;
	}
.littleZutatSpec .gwt-HTML {
	margin-top:5px;
	}
.gwt-Button {
  margin: 0;
  padding: 3px 5px;
  text-decoration: none;
  font-size: small;
  cursor: pointer;
  cursor: hand;
  background: url("hborder.png") repeat-x 0px -27px;
  border: 1px outset #ccc;
}
.gwt-Button:active {
  border: 1px inset #ccc;
}

.gwt-Button-active {
  border: 1px inset #ccc;
}
.active {
  border: 1px inset #ccc;
}

.gwt-Button:hover {
  border-color: #9cf #69e #69e #7af;
}
.gwt-Button[disabled] {
  cursor: default;
  color: #888;
}
.gwt-Button[disabled]:hover {
  border: 1px outset #ccc;
}

/* Dialog boxes */
.dialogTopLeftInner, .dialogMiddleLeftInner, .dialogBottomLeftInner,
.dialogTopRightInner, .dialogMiddleRightInner, .dialogBottomRightInner {
  display: none;
}
.gwt-DialogBox {
  background-color: white;
  border: 1px solid #666;
  z-index: 2;
}
.gwt-DialogBox .Caption {
  background: #d3d6dd url(gradient_bg_th.png) repeat-x bottom left;
  font-weight: bold;
  text-shadow: #fff 0 2px 2px;
  cursor: default;
  padding: 5px 10px;
  border-bottom: 1px solid #999;
  text-align: left;
}
.gwt-DialogBox .dialogContent {
}
.gwt-DialogBox .gwt-Button {
  margin: 10px;
}
.gwt-PopupPanelGlass {
  background-color: #000;
  opacity: 0.3;
  filter: literal("alpha(opacity=30)");
  z-index: 2;
}

/* GWT Tree */
.gwt-Tree {
}
.gwt-Tree .gwt-TreeItem {
  padding: 0;
  cursor: hand;
  cursor: pointer;
  display: block !important;
}
.gwt-Tree .gwt-TreeItem-selected {
  background: #ccc;
}

/* Splitters */
.gwt-SplitLayoutPanel-HDragger {
background-color: #fff;
  cursor: col-resize;
    	border-left: 1.5px solid #bbb; 
}

.noSplitter .gwt-SplitLayoutPanel-VDragger {
	background: #f00;
	border: 0px;
	margin: 0px;
	padding : 0px;
	cursor: default;
	}

.gwt-SplitLayoutPanel-VDragger {
	  	border-top: 1.5px solid #bbb;

	background-color: #fff;
  cursor: row-resize;
}

.rating{
	width:80px;
	height:16px;
	margin:0 0 20px 0;
	padding:0;
	list-style:none;
	clear:both;
	position:relative;
	background: url(star-matrix.gif) no-repeat 0 0;
}
/* add these classes to the ul to effect the change to the correct number of stars */
.nostar {background-position:0 0}
.onestar {background-position:0 -16px}
.twostar {background-position:0 -32px}
.threestar {background-position:0 -48px}
.fourstar {background-position:0 -64px}
.fivestar {background-position:0 -80px}
ul.rating li {
	cursor: pointer;
 /*ie5 mac doesn't like it if the list is floated\*/
	float:left;
	/* end hide*/
	text-indent:-999em;
}
ul.rating li a {
	position:absolute;
	left:0;
	top:0;
	width:16px;
	height:16px;
	text-decoration:none;
	z-index: 200;
}
ul.rating li.one a {left:0}
ul.rating li.two a {left:16px;}
ul.rating li.three a {left:32px;}
ul.rating li.four a {left:48px;}
ul.rating li.five a {left:64px;}
ul.rating li a:hover {
	z-index:2;
	width:80px;
	height:16px;
	overflow:hidden;
	left:0;	
	background: url(star-matrix.gif) no-repeat 0 0
}
ul.rating li.one a:hover {background-position:0 -96px;}
ul.rating li.two a:hover {background-position:0 -112px;}
ul.rating li.three a:hover {background-position:0 -128px}
ul.rating li.four a:hover {background-position:0 -144px}
ul.rating li.five a:hover {background-position:0 -160px}

